--- a/facebook.html
+++ b/facebook.html
@@ -133,7 +133,7 @@ Home
 
                         <div class="btn-group" role="group">
 
-                            <button type="button" class="btn btn-default navbar-btn">
+                            <button type="button" class="btn btn-default navbar-btn fb-notifications">
 
 <span class="glyphicon glyphicon-user"></span>
 
@@ -141,7 +141,7 @@ Home
 
 </button>
 
-                            <button type="button" class="btn btn-default navbar-btn">
+                            <button type="button" class="btn btn-default navbar-btn fb-notifications">
 
 <span class="glyphicon glyphicon-comment"></span>
 
@@ -149,7 +149,7 @@ Home
 
 </button>
 
-                            <button type="button" class="btn btn-default navbar-btn">
+                            <button type="button" class="btn btn-default navbar-btn fb-notifications">
 
 <span class="glyphicon glyphicon-globe"></span>
 
@@ -253,7 +253,7 @@ good answer here: http://stackoverflow.com/a/22263969 -->
 
             <!-- Left sidebar: A cell that spans 2 columns -->
 
-            <div class="col-md-2">
+            <div class="col-md-2 fb-left-sidebar">
 
                 <ul class="nav nav-pills nav-stacked">
 
@@ -291,7 +291,7 @@ News Feed</a>
 
                             <span class="glyphicon glyphicon-comment"></span> Messages
 
-                            <span class="badge">7</span>
+                            <span class="badge pull-right">7</span>
 
                         </a>
 
@@ -329,7 +329,7 @@ Gifts</a>
 
                             <span class="glyphicon glyphicon-bookmark"></span> Saved
 
-                            <span class="badge">2</span>
+                            <span class="badge pull-right">2</span>
 
                         </a>
 
@@ -707,7 +707,7 @@ Post
 
             <!-- Right sidebar: A cell that spans 3 columns -->
 
-            <div class="col-md-3">
+            <div class="col-md-3 fb-right-sidebar">
 
                 <!-- Nested grid! Like the outer grid, it's just a sequence of rows. -->
 
